--- a/linguagens_repos.ipynb
+++ b/linguagens_repos.ipynb
@@ -4465,11 +4465,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Autentificação"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "acess_token = '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'\n",
+    "headers = {'Autorization' : 'Bearer' + acess_token,\n",
+    "           'X-GitHub-Api-Version': '2022-11-28'}\n"
+   ]
   }
  ],
  "metadata": {
