atualização de tokern

--- a/linguagens_repos.ipynb
+++ b/linguagens_repos.ipynb
@@ -38545,7 +38545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -38554,7 +38554,7 @@
        "'https://api.github.com/user/repos'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38568,25 +38568,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "401"
+       "201"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = {\n",
-    "    'name': 'linguagens-utilizadas',\n",
+    "    'name': 'linguagens-utilizadas-teste',\n",
     "    'description': 'Repositorio com as linguagens de prog da Amazon',\n",
     "    'private': False\n",
+    "}\n",
+    "\n",
+    "token = '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'\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"token {token}\",\n",
+    "    \"Accept\": \"application/vnd.github.v3+json\"\n",
     "}\n",
     "\n",
     "response = requests.post(url, json=data, headers=headers)\n",
