upload de arquivos para um repositório GitHub usando a biblioteca requests

--- a/linguagens_repos.ipynb
+++ b/linguagens_repos.ipynb
@@ -38598,6 +38598,93 @@
     "response = requests.post(url, json=data, headers=headers)\n",
     "response.status_code"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formato do arquivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('amazon.csv', 'rb') as file:\n",
+    "    file_content = file.read()\n",
+    "\n",
+    "    encoded_content = base64.b64encode(file_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Upload do arquivo com PUT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://api.github.com/repos/felippeximenes/linguagens-utilizadas/contents/amazon.csv'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "api_base_url = 'https://api.github.com'\n",
+    "username = 'felippeximenes'\n",
+    "repo = 'linguagens-utilizadas'\n",
+    "path = 'amazon.csv'\n",
+    "\n",
+    "url = f'{api_base_url}/repos/{username}/{repo}/contents/{path}'\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "404"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'message': 'Adicionando um novo arquivo',\n",
+    "    'content': encoded_content.decode('utf-8')\n",
+    "}\n",
+    "\n",
+    "response = requests.put(url, json=data, headers=headers)\n",
+    "response.status_code"
+   ]
   }
  ],
  "metadata": {
